syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.proto.user";

message UserRequest{
  string first_name = 1;
  string last_name = 2;
}

message UserResponse{
  string first_name = 1;
  string last_name = 2;
}
service UserInfo{
  rpc getUserInfo(UserRequest) returns (UserResponse);
}
